cabal-version:       2.4

name:                Brainfuck
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Avi Caspe
maintainer:          avi.caspe@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:         base
                       , megaparsec
                       -- , mutable
                       -- , primitive
                       , conduino
                       , mtl
                       , transformers
  exposed-modules:     
  other-modules:       
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  LambdaCase
